# tomjones8

./: README.md  test.py
Code/start project /: README.md  setup.cfg
Code/start project /docs/: index.rst
code/start project /: MANIFEST.in
code/start project /docs/: conf.py  reference.rst
code/start project /start_project_/: __main__.py
tom_code/: my_calculations.py
